--- a/templates/user_temp/user_about.html
+++ b/templates/user_temp/user_about.html
@@ -15,13 +15,6 @@
     <section class="about spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="about__pic">
-                        <img src="{% static 'img/about/about-us.jpg' %}" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="about__item">
                         <h4>Who We Are ?</h4>
@@ -46,48 +39,14 @@
             </div>
         </div>
     </section>
-    
-    <section class="section block-team">
-      <div class="container"> 
-        <div class="text-center wow bounceIn"> 
-          <p class="text-17-medium text-uppercase mb-15 primary-navy">Meet the founders</p>
-          <h3 class="mb-15">We're Supply Chain</h3>
-        </div>
-        <div class="row mt-60 wow zoomIn"> 
-          <div class="col-lg-4">
-            <div class="cardTeam"> 
-              <div class="cardImage"><img src="assets/imgs/page/about1/team.png" alt="Guza"></div>
-              <div class="cardInfo"> 
-                <h6 class="cardTitle text-17-medium">Anna Madsen</h6>
-                <p class="cardDesc text-17 neutral-medium-dark">Co-founder</p>
-                <div class="socials"><a href="#"><img src="assets/imgs/page/about1/fb.svg" alt="Guza"></a><a href="#"><img src="assets/imgs/page/about1/insta.svg" alt="Guza"></a></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="cardTeam"> 
-              <div class="cardImage"><img src="assets/imgs/page/about1/team2.png" alt="Guza"></div>
-              <div class="cardInfo"> 
-                <h6 class="cardTitle text-17-medium">Terry Kenter</h6>
-                <p class="cardDesc text-17 neutral-medium-dark">Designer</p>
-                <div class="socials"><a href="#"><img src="assets/imgs/page/about1/fb.svg" alt="Guza"></a><a href="#"><img src="assets/imgs/page/about1/insta.svg" alt="Guza"></a></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="cardTeam"> 
-              <div class="cardImage"><img src="assets/imgs/page/about1/team3.png" alt="Guza"></div>
-              <div class="cardInfo"> 
-                <h6 class="cardTitle text-17-medium">Ruben Donin</h6>
-                <p class="cardDesc text-17 neutral-medium-dark">Makerter</p>
-                <div class="socials"><a href="#"><img src="assets/imgs/page/about1/fb.svg" alt="Guza"></a><a href="#"><img src="assets/imgs/page/about1/insta.svg" alt="Guza"></a></div>
-              </div>
-            </div>
+    <section class="section block-banner-street"> 
+        <div class="container"> 
+          <div class="box-banner-street">
+            <h1 class="text-68 mb-10">Soccer is more than a sport</h1>
+            <p class="text-24 mb-30">it's a universal language of passion, teamwork, and dreams.</p><a class="btn btn-white" href="/user_shop">Shop Now</a>
           </div>
         </div>
-      </div>
     </section>
-
     <section class="testimonial">
         <div class="container-fluid">
             <div class="row">
