--- a/templates/user_temp/user_change_password.html
+++ b/templates/user_temp/user_change_password.html
@@ -4,17 +4,17 @@
 {% block body %}
 
 <main class="main">
-    <section class="section block-banner-shop"> 
-      <div class="container"> 
-        <h1 class="text-56-medium">PROFILE</h1>
-        <div class="breadcrumbs"> 
-          <ul> 
-            <li> <a href="/">Home </a></li>
-            <li> <a href="/user_profile">Profile</a></li>
-          </ul>
+    <section class="section block-banner-shop" style="background-image: url({% static 'img/banner/banner_pro.jpg' %});"> 
+        <div class="container"> 
+          <h1 class="text-56-medium">PROFILE</h1>
+          <div class="breadcrumbs"> 
+            <ul> 
+              <li> <a href="/">Home </a></li>
+              <li> <a href="">Change Password</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
     <section class="section block-content-shop">
         <div class="container">
