--- a/templates/user_temp/user_profile.html
+++ b/templates/user_temp/user_profile.html
@@ -6,6 +6,7 @@
 <main class="main">
   <section class="section block-banner-shop" style="background-image: url({% static 'img/banner/banner_pro.jpg' %});"> 
     <div class="container"> 
+      <h1 class="text-56-medium">PROFILE</h1>
       <div class="breadcrumbs"> 
         <ul> 
           <li> <a href="/">Home </a></li>
