--- a/templates/user_temp/user_shipping.html
+++ b/templates/user_temp/user_shipping.html
@@ -453,7 +453,7 @@
                                         <li>Grand Total <span>&#8377;&nbsp;{{grand_total}}</span></li>
                                     </ul>
                                 </div>
-                                <a href="/user_checkout " class="primary-btn">Proceed to checkout</a>
+                                <a href="/user_checkout " class="btn btn-black">Proceed to checkout</a>
                             </div>
                         </div>
                         </div>
