--- a/templates/user_temp/user_wallet.html
+++ b/templates/user_temp/user_wallet.html
@@ -4,13 +4,13 @@
 {% block body %}
 
 <main class="main">
-  <section class="section block-banner-shop"> 
+  <section class="section block-banner-shop" style="background-image: url({% static 'img/banner/banner_pro.jpg' %});"> 
     <div class="container"> 
       <h1 class="text-56-medium">PROFILE</h1>
       <div class="breadcrumbs"> 
         <ul> 
           <li> <a href="/">Home </a></li>
-          <li> <a href="/user_profile">Profile</a></li>
+          <li> <a href="">Wallet</a></li>
         </ul>
       </div>
     </div>
@@ -79,6 +79,7 @@
                       <div class="inputDiv text-center">
                         <h6>Balance Amount</h6>
                         <h5>&#8377; {{wallet_amount}}</h5>
+                        <h7> {{request.user.referral_code}}</h7>
                       </div>
                     </div>
                   </div>
