--- a/urbanhub/static/assets/css/style2513.css
+++ b/urbanhub/static/assets/css/style2513.css
@@ -8165,7 +8165,7 @@ footer a {
 
 .block-banner-street {
   height: 650px;
-  background-image: url(../imgs/page/homepage14/street.png);
+  background-image: url(../imgs/page/about1/about-us.jpg);
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
