--- a/templates/user_temp/user_index.html
+++ b/templates/user_temp/user_index.html
@@ -106,8 +106,89 @@
 			</div>
 		</div>
     </section>
+	<section class="section icon-box-type1 wow fadeInUp"> 
+        <div class="container"> 
+          <div class="row"> 
+            <div class="col-lg-3 col-sm-6"> 
+              <div class="box-icon-type-1"> 
+                <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage3/ship.svg'%}" alt="Guza"></div>
+                <div class="item-info"> <span class="text-18">Free Shipping</span></div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6"> 
+              <div class="box-icon-type-1"> 
+                <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/return.svg'%}" alt="Guza"></div>
+                <div class="item-info"> <span class="text-18">60 - Days Returns</span></div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6"> 
+              <div class="box-icon-type-1"> 
+                <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/payment.svg'%}" alt="Guza"></div>
+                <div class="item-info"> <span class="text-18">Security Payment</span></div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6"> 
+              <div class="box-icon-type-1"> 
+                <div class="item-image"> <img src="{% static 'assets/imgs/page/homepage4/cart.svg'%}" alt="Guza"></div>
+                <div class="item-info"> <span class="text-18">Order Tracking</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+	<section class="section box-categories"> 
+        <div class="container"> 
+          <div class="row align-items-center"> 
+            <div class="col-lg-6 mb-20"> 
+              <div class="cardCategoriesStyle1 wow fadeInUp"> 
+                <div class="cardInfo"> 
+                  <p class="tag-title text-16-medium mb-15">Boots Collection</p>
+                  <h2 class="mb-30">Play with your heart</h2>
+				  <p class="body-p2 mb-30"></p><a class="link-underline" href="/user_shop/category/boots/">Shop Now</a>
 
-    <section class="banner spad">
+                </div>
+                <div class="cardImage"> <img src="{% static 'img/banner/banner-1.jpg' %}" alt="Guza"></div>
+              </div>
+            </div>
+            <div class="col-lg-6 mb-20"> 
+              <div class="cardCategoriesStyle1 bg-1 wow fadeInUp"> 
+                <div class="cardInfo"> 
+                  <p class="tag-title text-16-medium mb-15">Football Collection</p>
+                  <h2 class="mb-30">"Game ON</h2><a class="link-underline" href="/user_shop/category/football/">Shop Now</a>
+                </div>
+                <div class="cardImage"> <img src="{% static 'img/banner/banner-2.jpg' %}" alt="Guza"></div>
+              </div>
+            </div>
+            <div class="col-lg-8 mb-20">
+              <div class="cardCategoriesStyle1 cardCategoriesStyle2 bg-7 wow fadeInUp"> 
+                <div class="cardInfo">
+                  <div class="box-content-middle"> 
+                    <h2 class="mb-10">"Defend <br class="d-none d-lg-block"> with Confidence"</h2>
+                    <p class="body-p2 mb-30"> -Manuel Neuer</p><a class="link-underline" href="/user_shop/category/gloves/">Shop Now</a>
+                  </div>
+                </div>
+                <div class="cardImage"> <img src="{% static 'img/banner/banner-3.jpg' %}" alt="Guza" style="width: 1500px; height: 100%;"></div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-20"> 
+              <div class="cardCategoriesStyle3 wow fadeInUp">
+                <div class="cardInfo"> 
+                  <h2 class="mb-30">Discover the full category</h2><a class="link-underline-white" href="/user_shop">Shop Now</a>
+                </div>
+                <div class="cardImage" style="background-image: url({% static 'img/banner/banner-4.jpg' %})"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+	<section class="section">
+		<video id="myVideo" src="https://brand.assets.adidas.com/video/upload/q_auto,f_auto:video/video/upload/enIN/football-fw23-wwc-campaign-launch-iin-mh-large-animated-t.mp4" width="100%" height="100%" autoplay loop></video>
+    </section>
+
+
+
+	
+    {% comment %} <section class="banner spad">
         <div class="container">
             <div class="row">
                 {% for category in links %}
@@ -158,7 +239,8 @@
                 {% endfor %}
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
+
 </main>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
