--- a/templates/user_temp/user_order.html
+++ b/templates/user_temp/user_order.html
@@ -1,16 +1,16 @@
 {% extends 'user_temp/base.html' %} 
 {% load static %} 
-{% block title%}OEDER DETAILS{%endblock title %}
+{% block title%}ORDER DETAILS{%endblock title %}
 {% block body %}
 
 <main class="main">
-  <section class="section block-banner-shop"> 
+  <section class="section block-banner-shop" style="background-image: url({% static 'img/banner/banner_pro.jpg' %});"> 
     <div class="container"> 
       <h1 class="text-56-medium">PROFILE</h1>
       <div class="breadcrumbs"> 
         <ul> 
           <li> <a href="/">Home </a></li>
-          <li> <a href="/user_profile">Profile</a></li>
+          <li> <a href="">Orders</a></li>
         </ul>
       </div>
     </div>
