--- a/templates/user_temp/user_order_invoice.html
+++ b/templates/user_temp/user_order_invoice.html
@@ -1,98 +1,135 @@
-{% extends 'user_temp/base.html' %} 
-{% load static %} 
-{% block title%}OEDER INVOICE{%endblock title %}
-{% block body %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="zxx">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Male_Fashion Template">
+    <meta name="keywords" content="Male_Fashion, unica, creative, html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %} {% endblock title %}</title>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"rel="stylesheet">
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.rtl.min.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/imgs/template/favicon.svg'%}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css">
 
+    
+</head>
 
-<div class="container mt-5"  >
-    <main class="main-wrap" style="margin-top: 100px; margin-bottom: 100px">
-        <section class="content-main">
-        {% for i in orders %}
-            {% with order=orders.0 order_product=order_products payment=payments.0 %}
-            <div class="content-header">
-                <div>
-                    <h2 class="content-title card-title">Order detail</h2>
-                    <p>Details for Order ID: {{order.order_number}}</p>
-                </div>
-            </div>
-            <div class="panel-body p30">
-                <div class="row">
-                    
-                    <div class="col-lg-12">
-                        <div class="invoice-from">
-                            <ul class="list-unstyled text-right">
-                                <li><strong>Order Number:</strong> {{ order.order_number }}</li>
-                                <li><strong>Payment Method:</strong> {{ payment.payment_method }}</li>
-                                <li><strong>Order Total:</strong> {{ order.order_total }}</li>
-                                <li><strong>Order Date:</strong> {{ order.created_at }}</li>
-                                <li><strong>Status:</strong> {{ payment.status }}</li>
-                            </ul>
-                        </div>
+<body>
+    <div class="container mt-5  invoice-container"  >
+        <main class="main-wrap" style="margin-top: 100px; margin-bottom: 100px">
+            <section class="content-main">
+            {% for i in orders %}
+                {% with order=orders.0 order_product=order_products payment=payments.0 %}
+                <div class="content-header">
+                    <div>
+                        <h2 class="content-title card-title"> VOXY INVOICE</h2>
+                        <p>Details for Order ID: {{order.order_number}}</p>
                     </div>
-                    <div class="col-lg-12">
-                 
-                        <div class="invoice-details mt25">
-                            <div class="well">
-                                <ul class="list-unstyled mb0">
-                                    <br>
-                                    <li><strong>ADDRESS DETAILS</strong></li>
-                                    <li>{{ order.address.first_name }} {{ order.address.last_name }}</li>
-                                    <li>{{order.address.address_line_1 }}</li>
-                                    <li>{{ order.address.city }}, {{ order.address.state }} {{ order.address.pin }}</li>
-                                    <li>{{ order.address.country }}</li>
+                </div>
+                <div class="panel-body p30">
+                    <div class="row">
+                        
+                        <div class="col-lg-12">
+                            <div class="invoice-from">
+                                <ul class="list-unstyled">
+                                    <li><strong>Order Number:</strong> {{ order.order_number }}</li>
+                                    <li><strong>Payment Method:</strong> {{ payment.payment_method }}</li>
+                                    <li><strong>Order Total:</strong> {{ order.order_total }}</li>
+                                    <li><strong>Order Date:</strong> {{ order.created_at }}</li>
+                                    <li><strong>Status:</strong> {{ payment.status }}</li>
                                 </ul>
                             </div>
                         </div>
-                       
-                        <div class="invoice-items">
-                            <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th class="per70 text-center">Description</th>
-                                            <th class="per5 text-center">Qty</th>
-                                            <th class="per25 text-center">Total</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for order_product in order.orderproduct_set.all %}
-                                            <tr>
-                                                <td>{{ order_product.product.product_name }}</td>
-                                                <td class="text-center">{{ order_product.quantity }}</td>
-                                                <td class="text-center">{{ order_product.product_price }}</td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <th colspan="2" class="text-right">Sub Total:</th>
-                                            <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
-                                        </tr>
-                                        <tr>
-                                            <th colspan="2" class="text-right">Tax:</th>
-                                            <th class="text-center">&#8377;&nbsp;0</th>
-                                        </tr>
-                                        
-                                        <tr>
-                                            <th colspan="2" class="text-right">Grand Total:</th>
-                                            <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
-                                        </tr>
-                                    </tfoot>
-                                </table>
+                        <div class="col-lg-12">
+                     
+                            <div class="invoice-details mt25">
+                                <div class="well">
+                                    <ul class="list-unstyled mb0">
+                                        <br>
+                                        <li><strong>ADDRESS DETAILS</strong></li>
+                                        <li>{{ order.address.first_name }} {{ order.address.last_name }}</li>
+                                        <li>{{order.address.address_line_1 }}</li>
+                                        <li>{{ order.address.city }}, {{ order.address.state }} {{ order.address.pin }}</li>
+                                        <li>{{ order.address.country }}</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <a class="btn btn-secondary print ms-2" href="#">Download Invoice</a>
-                        </div>
-                        <div class="invoice-footer mt25">
-                            <p class="text-center">Thank you for shopping with us!</p>
+                           
+                            <div class="invoice-items">
+                                <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th class="per70 text-center">Description</th>
+                                                <th class="per5 text-center">Qty</th>
+                                                <th class="per25 text-center">Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for order_product in order.orderproduct_set.all %}
+                                                <tr>
+                                                    <td>{{ order_product.product.product_name }}</td>
+                                                    <td class="text-center">{{ order_product.quantity }}</td>
+                                                    <td class="text-center">{{ order_product.product_price }}</td>
+                                                </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th colspan="2" class="text-right">Sub Total:</th>
+                                                <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
+                                            </tr>
+                                            <tr>
+                                                <th colspan="2" class="text-right">Tax:</th>
+                                                <th class="text-center">&#8377;&nbsp;0</th>
+                                            </tr>
+                                            
+                                            <tr>
+                                                <th colspan="2" class="text-right">Grand Total:</th>
+                                                <th class="text-center">&#8377;&nbsp;{{ order.order_total }}</th>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                                <button  class="btn btn-secondary print ms-2" id="pdfButton">
+                                    Download Invoice
+                                </button>
+                            </div>
+                            <div class="invoice-footer mt25">
+                                <p class="text-center">Thank you for shopping with us!</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            {% endwith %}
-        {% endfor %}
-    
-        </section>
-    </main>
-</div>
-{% endblock %}
+                {% endwith %}
+            {% endfor %}
+        
+            </section>
+        </main>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+    <script>
+        document.getElementById("pdfButton").addEventListener("click", function () {
+            const invoiceContainer = document.querySelector(".invoice-container");
+            const pdfOptions = {
+                filename: 'invoice.pdf',
+                image: { type: 'jpeg', quality: 1.0 },
+                html2canvas: { scale: 2 },
+                jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+            };
+            html2pdf().from(invoiceContainer).set(pdfOptions).save();
+        });
+    </script>
+
+</body>
+
+</html>
