--- a/templates/user_temp/user_sign_up.html
+++ b/templates/user_temp/user_sign_up.html
@@ -31,39 +31,45 @@
           <form method="POST" id="signup-form" action="{% url 'user_sign_up' %}">
             {% csrf_token %}
             <div class="form-group">
-              <label class="form-control" for="first_name">{{ form.first_name }}</label>
+              {{ form.first_name }}
               {% if form.first_name.errors %}
                 <span class="text-danger">{{ form.first_name.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label class="form-control" for="last_name">{{ form.last_name }}</label>
+              {{ form.last_name }}
               {% if form.last_name.errors %}
                 <span class="text-danger">{{ form.last_name.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label class="form-control" for="email">{{ form.email }}</label>
+              {{ form.email }}
               {% if form.email.errors %}
                 <span class="text-danger">{{ form.email.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label class="form-control" for="mobile">{{ form.mobile }}</label>
+              {{ form.mobile }}
               {% if form.mobile.errors %}
                 <span class="text-danger">{{ form.mobile.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label class="form-control" for="password">{{ form.password }}</label>
+              {{ form.password }}
               {% if form.password.errors %}
                 <span class="text-danger">{{ form.password.errors.0 }}</span>
               {% endif %}
             </div>
             <div class="form-group">
-              <label class="form-control" for="confirm_password" class="checkout__input">{{ form.confirm_password }}</label>
+              {{ form.confirm_password }}
               {% if form.non_field_errors %}
                 <span class="text-danger">{{ form.non_field_errors.0 }}</span>
+              {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.referral_code }}
+              {% if form.referral_code.errors %}
+                  <span class="text-danger">{{ form.referral_code.errors.0 }}</span>
               {% endif %}
             </div>
             <p class="forgot-signup-links">
